fix: Fix dark mode small issues (#7573)
Github issue / Community forum post (link here to close automatically):

--- a/packages/design-system/src/css/_tokens.scss
+++ b/packages/design-system/src/css/_tokens.scss
@@ -77,6 +77,7 @@
 	--color-sticky-default-background: var(--prim-color-alt-d);
 	--color-sticky-default-border: var(--prim-color-alt-d-shade-150);
 	--color-sticky-font: var(--prim-gray-740);
+	--color-sticky-code-background: var(--color-background-base);
 
 	// Expressions
 	--color-valid-resolvable-foreground: var(--prim-color-alt-a);
